# zelosmcp

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docmancer-implementation-plan.md  ledger.yaml  mcpdoc-implementation-plan.md  progress.txt  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  hooks.json  mcp.json  pull_request_template.md  zelosmcp.json
.github/agents/: explore.agent.md  zelos-agent-vscode.agent.md  zelos-ask-vscode-v2.agent.md  zelos-mcp-only-vscode.agent.md  zelos-plan-vscode.agent.md
.github/hooks/: hooks.json
.github/prompts/: plan-replaceFlatAgents.prompt.md
.github/skills/architecture-map/: SKILL.md
.github/skills/change-blast-radius/: SKILL.md
.github/workflows/: add-to-project.yml  branch-lint.yml  docs.yml  integration-tests.yml  promotion-check.yml  release.yml  tracker-in-progress.yml  tracker-ready-for-qa.yml  unit-tests.yml
benchmarks/: .bench.env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
benchmarks/prompts/: suite.json
benchmarks/src/: cli.ts  configs.ts  report.ts  runner.ts  secrets.ts  static-analyzer.ts  tokens.ts  types.ts  usage-api.ts
benchmarks/tests/: cli.test.ts  configs.test.ts  copilot-adapter.test.ts  prompts.test.ts  report.test.ts  runner.test.ts  secrets.test.ts  static-analyzer.test.ts  tokens.test.ts  types.test.ts
configs/: auth-providers.json  default-localmcp.json  default-volumes.conf  default-zelosmcp.json  example-auth-providers.json  example-passthrough-zelosmcp.json  mandatory-localmcp.json  mandatory-zelosmcp.json
configs/assets/: filesystem.yaml  global.yaml  mcpdoc.yaml  pincher.yaml
deploy/: README.md
deploy/kubernetes/: cr-sample.yaml  ghcr-pull-secret.example.yaml  zelosmcp.yaml
deploy/swarm/: docker-compose.yml
docker-tools/: Dockerfile  README.md  buildx.Dockerfile
docs/: architecture.md  asset-kinds.md  assets-api.md  assets-editor.md  assets-yaml.md  assets.md  benchmarks.md  built-in-mcp.md  compression.md  configuration.md  cursor-integration.md  dashboard.md  default-mcps.md  http-api.md  makefile.md  oauth-passthrough.md  quickstart-no-docker.md  quickstart.md  repositories.md  reverse-proxy.md  setup-rancher-desktop.md  vscode-integration.md
scripts/: compare_aggregator_mcp.py  init_env.py
src/localmcp/: __main__.py  aggregator.py  app.py  builtin.py  compression.py  config.py  docs.py  manager.py  proxy.py  repos.py  savings.py  savings_db.py  ui.py
src/zelosmcp/: __main__.py  aggregator.py  app.py  builtin.py  compression.py  config.py  constants.py  docs.py  llms_txt_registry.py  manager.py  openapi.py  passthrough_pool.py  proxy.py  repos.py  response.py  savings.py  savings_db.py  ui.py  util.py
tests/: conftest.py  test_aggregator_gating.py  test_aggregator_unit.py  test_app_integration.py  test_auth_config.py  test_auth_framework.py  test_auth_github_provider.py  test_auth_http_routes.py  test_auth_manager_integration.py  test_auth_okta_authorization_code_provider.py  test_auth_okta_provider.py  test_builtin_unit.py  test_compression_unit.py  test_config_unit.py  test_llms_txt_registry.py  test_manager_unit.py  test_mcpdoc_integration.py  test_oauth_passthrough_integration.py  test_passthrough_pool.py  test_prompt_assets.py  test_proxy_unit.py  test_push_targets.py  test_repos_api.py  test_repos_ui_smoke.py  test_response.py  test_savings.py  test_ui_connections.py
tests/framework/: test_assets_http.py  test_assetstore_sqlite.py  test_default_generator.py  test_hook_vscode_merge.py  test_kind_hook.py  test_kind_render_targets.py  test_renderer.py  test_renderer_vscode.py  test_schema.py  test_seeder.py  test_tool_classify.py  test_ui_assets_pane.py  test_vscode_mcp_json.py  test_yaml_unified.py
tmp/mcp_compare/: summary.json
(+107 files in other folders)
