[project]
name = "localmcp"
version = "0.1.0"
description = "Wrap any MCP server and serve it on localhost:8000 via Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "whucks_nike" },
]
dependencies = [
    "mcp>=1.0",
    "starlette",
    "uvicorn",
    "pyyaml",
    "httpx>=0.25",
    "aiosqlite>=0.20",
    "markdown>=3.5",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]

[project.scripts]
localmcp = "localmcp.app:main"

[project.urls]
Repository = "https://github.com/Nike-QRE/localmcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["localmcp"]
omit = ["src/localmcp/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
