[project]
name = "zelosmcp"
version = "0.1.0"
description = "Wrap any MCP server and serve it on localhost:8000 via Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "whucks_nike" },
]
dependencies = [
    "mcp>=1.0",
    "starlette",
    "uvicorn",
    "pyyaml",
    "httpx>=0.25",
    "aiosqlite>=0.20",
    "markdown>=3.5",
    "cryptography>=41.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]

[project.scripts]
zelosmcp = "zelosmcp.app:main"

[project.urls]
Repository = "https://github.com/nike-qre/zelosmcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zelosmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["zelosmcp"]
omit = ["src/zelosmcp/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
