[project]
name = "zelosmcp"
version = "0.1.0"
description = "Wrap any MCP server and serve it on localhost:8000 via Streamable HTTP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "whucks_nike" },
]
dependencies = [
    "mcp>=1.0",
    "starlette",
    "uvicorn",
    "pyyaml",
    "httpx>=0.25",
    "aiosqlite>=0.20",
    "markdown>=3.5",
    "cryptography>=41.0",
    "jsonschema>=4.18",
    "toon-token-optimizer>=1.0",
]

[project.optional-dependencies]
tokenizer = ["tiktoken>=0.7"]

[project.scripts]
zelosmcp = "zelosmcp.app:main"

[project.urls]
Repository = "https://github.com/ZelosAI/zelosmcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zelosmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["zelosmcp"]
omit = ["src/zelosmcp/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["src/zelosmcp/static/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4"]
ignore = [
    "E501",   # line length is enforced by formatter, not lint
    "B008",   # function-call-in-default-argument (common Starlette pattern)
    "SIM117", # nested with statements — already common in this codebase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src/zelosmcp"]
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
